--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -7,10 +7,62 @@
   .spread_input {
   	width: 1.2em;
   }
+  #planning_table {
+    font-size: 0.85em;
+  }
   #planning_table tbody tr td {
   	padding-bottom: 2px;
   	padding-right: 2px;
+    max-width: 200px;
   }
+[data-tip] {
+  position:relative;
+
+}
+[data-tip]:before {
+  content:'';
+  /* hides the tooltip when not hovered */
+  display:none;
+  content:'';
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #1a1a1a; 
+  position:absolute;
+  top:30px;
+  left:35px;
+  z-index:8;
+  font-size:0;
+  line-height:0;
+  width:0;
+  height:0;
+}
+[data-tip]:after {
+  display:none;
+  content:attr(data-tip);
+  position:absolute;
+  top:35px;
+  left:0px;
+  padding:5px 8px;
+  background:#1a1a1a;
+  color:#fff;
+  z-index:9;
+  font-size: 0.75em;
+  /*height:18px;*/
+  line-height:18px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  /*white-space:nowrap;*/
+  /*word-wrap:normal;*/
+  white-space: pre-line;
+  width: 350px;
+  font-size: 0.9em;
+
+}
+[data-tip]:hover:before,
+[data-tip]:hover:after {
+  display:block;
+}  
 </style>
 <div class="top-navigation-bar">
 <h2 class="entity-title"><%=t.bookings_planning.title%></h2>
