--- a/views/_not_assigned_bookings.erb
+++ b/views/_not_assigned_bookings.erb
@@ -1,3 +1,9 @@
+<style>
+   .stock_show {
+     cursor: pointer;
+     cursor: hand; 
+   }
+</style>
 <div id="booking_list">
   <form name="filter" class="guiblock">
          <h3 class="left-float" style="position: relative; top: 5px">Reservas</h3>
@@ -12,12 +18,13 @@
   <table id="elements_table" class="table">
      <thead class="table-header">
        <tr>
-         <th class="table-header-title" scope="col" style="width:5%"><%= t.not_assigned_bookings.table.id %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:20%"><%= t.not_assigned_bookings.table.date_from %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:20%"><%= t.not_assigned_bookings.table.date_to %></th>         
-         <th class="table-header-title centered_text" scope="col" style="width:35%"><%= t.not_assigned_bookings.table.customer %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.phone %></th>
+         <th class="table-header-title" scope="col" style="width:8%"><%= t.not_assigned_bookings.table.id %></th>
+         <th class="table-header-title" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.date_from %></th>
+         <th class="table-header-title" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.date_to %></th>         
+         <th class="table-header-title" scope="col" style="width:20%"><%= t.not_assigned_bookings.table.customer %></th>
+         <th class="table-header-title" scope="col" style="width:15%"><%= t.not_assigned_bookings.table.phone %></th>
          <th class="table-header-title centered_text" scope="col" style="width:10%"><%= t.not_assigned_bookings.table.color %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:15%"></th>
        </tr>
      </thead>
      <tbody id="elements_tbody" class="table-tbody">             
@@ -28,18 +35,21 @@
 <script type="text/tmpl" id="script_booking_line">
     <tr>
       <td class="table-cell left_text" style="border-bottom:none"><a href="/admin/booking/bookings/<%%= entity.id %>"><%%= entity.id %></a></td>
-      <td class="table-cell centered_text" style="border-bottom:none"><%%= formatter.formatDate(entity.date_from,'dd.MM.yyyy') %> </td>
-      <td class="table-cell centered_text" style="border-bottom:none"><%%= formatter.formatDate(entity.date_to,'dd.MM.yyyy') %> </td>
-      <td class="table-cell centered_text" style="border-bottom:none"><%%= entity.customer_name %> <%%=entity.customer_surname%></td>
-      <td class="table-cell centered_text" style="border-bottom:none"><%%= entity.customer_phone %> <%%=entity.customer_mobile_phone%></td>
+      <td class="table-cell" style="border-bottom:none"><%%= formatter.formatDate(entity.date_from,'dd.MM.yyyy')%> <%if @product_family.time_to_from%><%%=entity.time_from%><%end%> </td>
+      <td class="table-cell" style="border-bottom:none"><%%= formatter.formatDate(entity.date_to,'dd.MM.yyyy') %> <%if @product_family.time_to_from%><%%=entity.time_to%><%end%> </td>
+      <td class="table-cell" style="border-bottom:none"><%%= entity.customer_name %> <%%=entity.customer_surname%></td>
+      <td class="table-cell" style="border-bottom:none"><%%= entity.customer_phone %> <%%=entity.customer_mobile_phone%></td>
       <td class="table-cell centered_text" style="border-bottom:none">
          <form name="color">
             <input type="hidden" name="id" value="<%%=entity.id%>"/>
             <input type="color" class="planning_color" name="planning_color" value="<%%=entity.planning_color%>"/>
          </form>
       </td>
+      <td class="table-cell centered_text" style="border-bottom: none">
+         <div id="show_stock" class="stock_show" rel="<%%=entity.id%>"><%= t.not_assigned_bookings.table.show_stock %></div>
+      </td>
     </tr>
-    <tr>      
+    <tr id="stock_items_<%%=entity.id%>" class="stock_items" style="display:none">      
       <td  class="table-cell centered_text" colspan="2">
       </td>
       <td class="table-cell centered_text" colspan="4">
