--- a/views/report_reservations.erb
+++ b/views/report_reservations.erb
@@ -16,7 +16,31 @@
   </div>  
 </div>
 <div class="admin_content_wrapper">
+  <div class="container_12">
+    <div class="grid_6">
+      <form name="report_reservations_form" action="/admin/booking/reports/reservations" method="get">
+        <div class="formrow">
+          <div style="display: inline-block">
+            <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"/>
+          </div>
+          <div style="display: inline-block">
+            <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"/>
+          </div>
+          <div style="display: inline-block">
+            <input type="hidden" name="from" id="from"/>
+            <input type="hidden" name="to" id="to"/>
+            <input id="search" type="button" class="form-button blue-button" value="<%=t.entitymanagement.search%>"/>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
   <div>
+    <% if @reservations.empty? %>
+    <div class="all-border-solid-light top-margin-1line">
+         <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+    </div>
+    <% end %>    
     <% last_month = nil %>
     <% @reservations.each do |reservation| %>  
       <% if last_month != reservation.date_from.month %>
@@ -46,7 +70,7 @@
         <tr class="table-row">
           <td class="table-cell"><%=reservation.date_from.strftime('%Y-%m-%d')%> <%=reservation.time_from%></td>
           <td class="table-cell"><%=reservation.date_to.strftime('%Y-%m-%d')%> <%=reservation.time_to%></td>
-          <td class="table-cell"><%=reservation.id%></td>
+          <td class="table-cell"><a href="/admin/booking/bookings/<%=reservation.id%>"><%=reservation.id%></a></td>
           <td class="table-cell"><%=reservation.customer_name%> <%=reservation.customer_surname%></td>
           <td class="table-cell"><%=reservation.customer_phone%> <%=reservation.customer_mobile_phone%></td>
           <td class="table-cell"><%=reservation.customer_email%></td>
