--- a/views/reservation_activities_checkout.js.erb
+++ b/views/reservation_activities_checkout.js.erb
@@ -26,7 +26,8 @@ require(['jquery','YSDForms', 'jquery.validate',
         {
             
           submitHandler: function(form) {
-            return true;
+            form.submit();
+            return false;
           },
                                
           rules : {
