--- a/views/_booking_management_resources.erb
+++ b/views/_booking_management_resources.erb
@@ -1,11 +1,12 @@
-
+     <div class="container_12">
+       <div class="grid_6">
              <div class="bottom-margin" style="border:1px solid #EEE">             
                      <table class="table">
                         <thead class="table-header">
                           <tr>
-                            <th class="table-cell left_text" scope="col" style="width:15%"><%=t.booking_management.form.booking_resources.item%></th>
+                            <th class="table-cell left_text" scope="col" style="width:30%"><%=t.booking_management.form.booking_resources.item%></th>
                             <% if booking_item_family.named_resources %>
-                            <th class="table-cell left_text" scope="col" style="width:30%"><%=t.booking_management.form.booking_resources.user%></th>
+                            <th class="table-cell left_text" scope="col" style="width:40%"><%=t.booking_management.form.booking_resources.user%></th>
                             <% end %>
                             <% if booking_item_family.height %>                            
                             <th class="table-cell centered_text" scope="col" style="width:5%"><%=t.booking_management.form.booking_resources.height%></th>
@@ -71,4 +72,41 @@
                           <%% } %>
                         </tbody>
                       </table>
-                  </div>                  
+                  </div>
+       </div>
+       <div class="grid_6">
+
+         <div class="left-margin bottom-margin all-space" style="border:1px solid #EEE">
+            <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline"><%= t.booking_management.form.planning_color.title %></div>
+            <form name="planning" class="overflow">
+              <input type="hidden" name="id" value="<%%=entity.id%>"/> 
+              <div class="formrow">
+                <input type="color" name="planning_color" value="<%%=entity.planning_color%>"/>
+              </div>
+              <div class="navigation-bar bottom-margin">
+                <div class="navigation-bar-crud-buttons right-float right-margin">
+                  <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                </div>
+              </div> 
+            </form>
+          </div>
+
+         <div class="left-margin all-space" style="border:1px solid #EEE">
+            <form name="commercial_agent_form" class="overflow">
+              <input type="hidden" name="id" value="<%%=entity.id%>"/> 
+              <div class="formrow">
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.commercial_agent %></span>
+                <span class="entity-fieldvalue">                
+                  <input type="text" name="comercial_agent" id="comercial_agent" value="<%%=entity.comercial_agent%>" style="width: 100%"/>
+                </span>
+              </div>
+              <div class="navigation-bar bottom-margin">
+                <div class="navigation-bar-crud-buttons right-float right-margin">
+                  <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                </div>
+              </div> 
+            </form>
+         </div>
+
+       </div>
+     </div>                                        
