--- a/views/config_booking.js.erb
+++ b/views/config_booking.js.erb
@@ -24,6 +24,44 @@ require(['jquery','YSDForms'], function($, YSDForms) {
         }
       });
 
+      $("#rent_content > div").hide(); // Initially hide all content
+      $("#rent_tabs li:first").attr("id","current"); // Activate first tab
+      $("#rent_content > div:first").fadeIn(); // Show first tab content
+      $('#rent_tabs a').click(function(e) {
+        e.preventDefault();
+        if ($(this).attr("name") == 'preview') {
+          ($('#home_frame')[0]).contentWindow.location.reload();
+        }
+        if ($(this).closest("li").attr("id") == "current"){ //detection for current tab
+         return;       
+        }
+        else{             
+          $("#rent_content > div").hide(); //Hide all content
+          $("#rent_tabs li").attr("id",""); //Reset id's
+          $(this).parent().attr("id","current"); // Activate this
+          $('#' + $(this).attr('name')).fadeIn(); // Show content for current tab          
+        }
+      }); 
+
+      $("#activities_content > div").hide(); // Initially hide all content
+      $("#activities_tabs li:first").attr("id","current"); // Activate first tab
+      $("#activities_content > div:first").fadeIn(); // Show first tab content
+      $('#activities_tabs a').click(function(e) {
+        e.preventDefault();
+        if ($(this).attr("name") == 'preview') {
+          ($('#home_frame')[0]).contentWindow.location.reload();
+        }
+        if ($(this).closest("li").attr("id") == "current"){ //detection for current tab
+         return;       
+        }
+        else{             
+          $("#activities_content > div").hide(); //Hide all content
+          $("#activities_tabs li").attr("id",""); //Reset id's
+          $(this).parent().attr("id","current"); // Activate this
+          $('#' + $(this).attr('name')).fadeIn(); // Show content for current tab          
+        }
+      });      
+
   });
 
 });
