--- a/views/console_booking_configuration_templates.erb
+++ b/views/console_booking_configuration_templates.erb
@@ -2,84 +2,169 @@
   <h2 class="entity-title"><%=t.booking_configuration_templates.title%></h2>
 </div>
 <div class="admin_content_wrapper">
-<h3 class="bottom-border-solid"><%=t.booking_configuration_templates.general%></h3>
-<div class="container_12">
-  <div class="grid_6">
-    <table class="table" style="background:none">
-      <thead class="table-header-title" style="background:none">
-        <tr class="table-row" style="background:none">
-          <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
-          <th class="table-header-title" scope="col" style="width:25%"></th>
-        </tr>
-      </thead>
-      <tbody class="table-tbody">
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.summary_message%></td>
+
+<ul id="content_tabs" class="no-border no-background"class="no-border no-background">  
+  <% if booking_renting %>          
+    <li class="no-border no-background top-space" style="border:none;background:none">
+      <a name="renting_tab" href="#renting_tab"><%=t.booking_settings.form.rent_group%></a>
+    </li>
+  <% end %>
+  <% if booking_activities %>
+    <li class="no-border no-background top-space" style="border:none;background:none">
+      <a name="activities_tab" href="#activities_tab"><%=t.booking_settings.form.activities_group%></a>
+    </li>
+  <% end %>
+</ul>          
+
+<div id="content">
+  <% if booking_renting %>
+  <div id="renting_tab" class="top-margin bottom-margin">
+    <h3 class="bottom-border-solid"><%=t.booking_configuration_templates.general%></h3>
+    <div class="container_12">
+      <div class="grid_6">
+        <table class="table" style="background:none">
+          <thead class="table-header-title" style="background:none">
+            <tr class="table-row" style="background:none">
+              <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
+              <th class="table-header-title" scope="col" style="width:25%"></th>
+            </tr>
+          </thead>
+          <tbody class="table-tbody">
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.summary_message%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=summary_message.nil? ? nil : summary_message.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>    
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.conditions%></td>
-           <td class="table-cell"><div class="form-button"><a href="/admin/cms/content/edit/<%=conditions.nil? ? nil : conditions.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.contract%></td>
-           <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=contract.nil? ? nil : contract.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>        
-      </tbody>      
-    </table> 
-  </div>
-</div>
-<h3 class="top-margin-1line bottom-border-solid"><%=t.booking_configuration_templates.emails%></h3>
-<div class="container_12">
-  <div class="grid_6">
-    <h4 class="guiblock centered_text"><%=t.booking_configuration_templates.customer_emails%></h4>  
-    <table class="table" style="background:none">
-      <thead class="table-header-title" style="background:none">
-        <tr class="table-row" style="background:none">
-          <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
-          <th class="table-header-title" scope="col" style="width:25%"></th>
-        </tr>
-      </thead>
-      <tbody class="table-tbody">
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.email_customer_request_received%></td>
-           <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_r_c.nil? ? nil : b_m_r_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_request_received%></td>
+            </tr>    
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.conditions%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/content/edit/<%=conditions.nil? ? nil : conditions.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.contract%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=contract.nil? ? nil : contract.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>        
+          </tbody>      
+        </table> 
+      </div>
+    </div>
+    <h3 class="top-margin-1line bottom-border-solid"><%=t.booking_configuration_templates.emails%></h3>
+    <div class="container_12">
+      <div class="grid_6">
+        <h4 class="guiblock centered_text"><%=t.booking_configuration_templates.customer_emails%></h4>  
+        <table class="table" style="background:none">
+          <thead class="table-header-title" style="background:none">
+            <tr class="table-row" style="background:none">
+              <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
+              <th class="table-header-title" scope="col" style="width:25%"></th>
+            </tr>
+          </thead>
+          <tbody class="table-tbody">
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_r_c.nil? ? nil : b_m_r_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_request_received%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_r_c_pay_now.nil? ? nil : b_m_r_c_pay_now.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>
-        <tr class="table-row" style="background:none">
+            </tr>
+            <tr class="table-row" style="background:none">
               <td class="table-cell"><%=t.booking_configuration_templates.email_customer_reservation_confirmed%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_c_c.nil? ? nil : b_m_c_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>                        
-        <tr class="table-row" style="background:none">
+            </tr>                        
+            <tr class="table-row" style="background:none">
               <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_enabled%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_c_c_pay_enabled.nil? ? nil : b_m_c_c_pay_enabled.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>          
-      </tbody>      
-    </table>   
-  </div>  
-  <div class="grid_6">
-    <h4 class="guiblock centered_text left-margin"><%=t.booking_configuration_templates.manager_emails%></h4>  
-    <table class="table" style="background:none">
-      <thead class="table-header-title" style="background:none">
-        <tr class="table-row" style="background:none">
-          <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
-          <th class="table-header-title" scope="col" style="width:25%"></th>
-        </tr>
-      </thead>
-      <tbody class="table-tbody">
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.email_manager_request_received%></td>
-           <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_n.nil? ? nil : b_m_n.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>
-        <tr class="table-row" style="background:none">
-           <td class="table-cell"><%=t.booking_configuration_templates.email_manager_payment_request_received%></td>
+            </tr>          
+          </tbody>      
+        </table>   
+      </div>  
+      <div class="grid_6">
+        <h4 class="guiblock centered_text left-margin"><%=t.booking_configuration_templates.manager_emails%></h4>  
+        <table class="table" style="background:none">
+          <thead class="table-header-title" style="background:none">
+            <tr class="table-row" style="background:none">
+              <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
+              <th class="table-header-title" scope="col" style="width:25%"></th>
+            </tr>
+          </thead>
+          <tbody class="table-tbody">
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_n.nil? ? nil : b_m_n.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_payment_request_received%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_n_pay_now.nil? ? nil : b_m_n_pay_now.id%>"><%=t.entitymanagement.edit%></a></div></td>
-        </tr>                      
-      </tbody>      
-    </table>   
-  </div>    
+            </tr>  
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_confirmation%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_c_n.nil? ? nil : b_m_c_n.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>                              
+          </tbody>      
+        </table>   
+      </div>    
+    </div>
+  </div>
+  <% end %>
+  <% if booking_activities %>
+  <div id="activities_tab" class="top-margin bottom-margin">
+    <h3 class="top-margin-1line bottom-border-solid"><%=t.booking_configuration_templates.emails%></h3>
+    <div class="container_12">
+      <div class="grid_6">
+        <h4 class="guiblock centered_text"><%=t.booking_configuration_templates.customer_emails%></h4>  
+        <table class="table" style="background:none">
+          <thead class="table-header-title" style="background:none">
+            <tr class="table-row" style="background:none">
+              <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
+              <th class="table-header-title" scope="col" style="width:25%"></th>
+            </tr>
+          </thead>
+          <tbody class="table-tbody">
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_r_c.nil? ? nil : o_m_r_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_r_c_pay_now.nil? ? nil : o_m_r_c_pay_now.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_reservation_confirmed%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_c_c.nil? ? nil : o_m_c_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>                        
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_enabled%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_c_c_pay_enabled.nil? ? nil : o_m_c_c_pay_enabled.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>          
+          </tbody>      
+        </table>   
+      </div>  
+      <div class="grid_6">
+        <h4 class="guiblock centered_text left-margin"><%=t.booking_configuration_templates.manager_emails%></h4>  
+        <table class="table" style="background:none">
+          <thead class="table-header-title" style="background:none">
+            <tr class="table-row" style="background:none">
+              <th class="table-header-title" scope="col" style="width:75%"><%=t.booking_configuration_templates.template%></th>
+              <th class="table-header-title" scope="col" style="width:25%"></th>
+            </tr>
+          </thead>
+          <tbody class="table-tbody">
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_n.nil? ? nil : o_m_n.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_payment_request_received%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_n_pay_now.nil? ? nil : o_m_n_pay_now.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>  
+            <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_manager_confirmation%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=o_m_c_n.nil? ? nil : o_m_c_n.id%>"><%=t.entitymanagement.edit%></a></div></td>
+            </tr>                              
+          </tbody>      
+        </table>   
+      </div>    
+    </div>
+  </div>
+  <% end %>
 </div>
 </div>
